fine tuning and spacing fix in elastic agents page

--- a/source/assets/stylesheets/scss/_elastic-agents.scss
+++ b/source/assets/stylesheets/scss/_elastic-agents.scss
@@ -1,6 +1,6 @@
 .ea-banner-container {
   background: url(../images/elastic-agents-desktop-bg.png);
-  padding: 0 0 100px;
+  padding: 0 0 40px;
 
   @media (min-width: $screen-lg) {
     padding: 0 0 50px;
@@ -9,7 +9,7 @@
 
 .ea-banner_header {
   font-size: 30px;
-  padding: 40px 0;
+  padding: 40px 0 10px;
 
   @media (min-width: $screen-md) {
     font-size: 38px;
@@ -35,10 +35,6 @@
   padding: 30px 0 50px;
 }
 
-.ea-feature_header {
-  padding: 15px 0;
-}
-
 .ea-feature_desc {
   font-size: 18px;
 
@@ -48,13 +44,22 @@
 }
 
 .ea-feature-list_item {
-  margin: 45px auto 0px;
+  margin: 15px auto 0px;
   float: none;
+
+  @media (min-width: $screen-md) {
+    margin: 45px auto 0px;
+  }
 }
 
 .ea-feature-list {
+  
   list-style: none;
   padding: 0;
+}
+
+.ea-feature_header {
+  margin: 10px auto;
 }
 
 .ea-enterprise-feature {
@@ -67,16 +72,21 @@
 }
 
 .ea-ent-feature_header {
-  margin: 45px auto;
+  margin: 30px auto 25px;
   font-size: 32px;
-
+  font-family: "URWGeometric-ExtraBold";
   @media (min-width: $screen-lg) {
     font-size: 40px;
+    margin: 45px auto;
   }
 }
 
 .ea-ent-feature_desc {
+  @include grid-column(12);
+  @include grid-push(0);
+  @include grid-shift(0);
   font-size: 18px;
+  float: none;
 
   @media (min-width: $screen-lg) {
     font-size: 20px;
@@ -84,17 +94,28 @@
 }
 
 .ea-ent-feature-list {
+  @include grid-container;
+  @include grid-column(12);
+  @include grid-push(0);
+  @include grid-shift(0);
   list-style: none;
   margin: 0px auto 80px;
   padding: 0;
+  float: none;
 
 }
 
 .ea-ent-feature-list_item {
-  margin: 45px auto 0;
+  // margin: 45px auto 0;
+  @include grid-column(12);
+  @include grid-push(0);
+  @include grid-shift(0);
+  // @include grid-visual;
+  float: none;
 
-  @media (min-width: $screen-lg) {
-    padding: 0 28px;
+  @media (min-width: $screen-md) {
+    // padding: 0 28px;
+    @include grid-column(6);
   }
 
 }
@@ -120,7 +141,38 @@
 }
 
 .ea-button {
+  font-size: 18px;
+  position: relative;
+  z-index: 10;
   @media(max-width: $screen-sm-max) {
-    width: 100%;
+    width: calc(100% - 40px);
+    font-size: 20px;
   }
+
+  &:hover {
+    background: #fff;
+    opacity: 1;
+
+    &::after {
+      background: rgba(74, 217, 217, 0.7);
+    }
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: transparent;
+    border-radius: 5px;
+    z-index: -1;
+    transition: all 0.25s;
+  }
+  
+}
+
+.watermark-img {
+  vertical-align: text-top;
 }
